[gd_scene load_steps=4 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://FlatUI/kenneyUI.tres" type="Theme" id=2]
[ext_resource path="res://Assets/FlatUI/kenneyUI-yellow.tres" type="Theme" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 23.0
margin_right = 126.0
margin_bottom = 84.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1043.0
margin_top = -511.0
margin_right = 2325.0
margin_bottom = 1321.0
color = Color( 1, 1, 1, 0.0588235 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 340.0
margin_top = 150.0
margin_right = 474.0
margin_bottom = 261.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 3 )
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 189.0
margin_bottom = 18.0
text = "Paused"
align = 1

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 189.0
margin_bottom = 64.251
text = "controls"

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 189.324
margin_bottom = 110.251
text = "Return To Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 189.0
margin_bottom = 156.251
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_MainMenuButton_pressed"]
